--- a/index.html
+++ b/index.html
@@ -1,118 +1,36 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sistema Transportadora</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato com Desenvolvedores</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container mt-4">
-  <h2 class="mb-4">Sistema da Transportadora</h2>
-
-  <!-- Navegação por abas -->
-  <ul class="nav nav-tabs" id="tabMenu">
-    <li class="nav-item"><a class="nav-link active" data-bs-toggle="tab" href="#pedidos">Pedidos</a></li>
-    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#motoristas">Motoristas</a></li>
-    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#veiculos">Veículos</a></li>
-    <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#cidades">Cidades</a></li>
-  </ul>
-
-  <div class="tab-content mt-3">
-
-    <!-- Pedidos -->
-    <div class="tab-pane fade show active" id="pedidos">
-      <h4>Lista de Pedidos</h4>
-      <input class="form-control mb-2" type="text" placeholder="Buscar por status..." onkeyup="filtrarTabela('pedidosTabela', this.value, 5)">
-      <table class="table table-bordered" id="pedidosTabela">
-        <thead><tr><th>ID</th><th>Data</th><th>Cliente</th><th>Valor</th><th>Forma Pgto</th><th>Status</th></tr></thead>
-        <tbody></tbody>
-      </table>
+    <div class="container">
+        <h1>Entre em Contato Conosco</h1>
+        <p>Preencha o formulário abaixo para enviar uma mensagem diretamente aos desenvolvedores da solução.</p>
+        <form id="contactForm">
+            <div class="form-group">
+                <label for="name">Nome:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <div class="form-group">
+                <label for="subject">Assunto:</label>
+                <input type="text" id="subject" name="subject" required>
+            </div>
+            <div class="form-group">
+                <label for="message">Mensagem:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+            </div>
+            <button type="submit">Enviar Mensagem</button>
+            <div id="statusMessage" class="status-message"></div>
+        </form>
     </div>
-
-    <!-- Motoristas -->
-    <div class="tab-pane fade" id="motoristas">
-      <h4>Lista de Motoristas</h4>
-      <input class="form-control mb-2" type="text" placeholder="Buscar por nome..." onkeyup="filtrarTabela('motoristasTabela', this.value, 1)">
-      <table class="table table-bordered" id="motoristasTabela">
-        <thead><tr><th>ID</th><th>Nome</th><th>CPF</th><th>Cidade</th><th>CNH</th></tr></thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
-    <!-- Veículos -->
-    <div class="tab-pane fade" id="veiculos">
-      <h4>Lista de Veículos</h4>
-      <input class="form-control mb-2" type="text" placeholder="Buscar por modelo..." onkeyup="filtrarTabela('veiculosTabela', this.value, 2)">
-      <table class="table table-bordered" id="veiculosTabela">
-        <thead><tr><th>ID</th><th>Placa</th><th>Modelo</th><th>Capacidade (kg)</th><th>Status</th></tr></thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
-    <!-- Cidades -->
-    <div class="tab-pane fade" id="cidades">
-      <h4>Cidades (Motoristas e Clientes)</h4>
-      <ul id="listaCidades" class="list-group"></ul>
-    </div>
-
-  </div>
-</div>
-
-<script>
-// Dados simulados
-const pedidos = [
-  { id: 1, data: '2025-07-01', cliente: 'João Silva', valor: 1500.00, forma: 'Boleto', status: 'Pendente' },
-  { id: 2, data: '2025-07-03', cliente: 'Maria Lima', valor: 2300.00, forma: 'Cartão', status: 'Entregue' }
-];
-
-const motoristas = [
-  { id: 1, nome: 'Carlos Souza', cpf: '111.222.333-44', cidade: 'Lagoa Vermelha', cnh: 'AB' },
-  { id: 2, nome: 'Fernanda Costa', cpf: '555.666.777-88', cidade: 'Passo Fundo', cnh: 'C' }
-];
-
-const veiculos = [
-  { id: 1, placa: 'ABC-1234', modelo: 'Fiorino', capacidade: 800, status: 'Disponível' },
-  { id: 2, placa: 'XYZ-9876', modelo: 'Sprinter', capacidade: 2000, status: 'Em Manutenção' }
-];
-
-function popularTabelas() {
-  const pedidosBody = document.querySelector('#pedidosTabela tbody');
-  pedidos.forEach(p => {
-    pedidosBody.innerHTML += `<tr><td>${p.id}</td><td>${p.data}</td><td>${p.cliente}</td><td>R$ ${p.valor.toFixed(2)}</td><td>${p.forma}</td><td>${p.status}</td></tr>`;
-  });
-
-  const motoristasBody = document.querySelector('#motoristasTabela tbody');
-  motoristas.forEach(m => {
-    motoristasBody.innerHTML += `<tr><td>${m.id}</td><td>${m.nome}</td><td>${m.cpf}</td><td>${m.cidade}</td><td>${m.cnh}</td></tr>`;
-  });
-
-  const veiculosBody = document.querySelector('#veiculosTabela tbody');
-  veiculos.forEach(v => {
-    veiculosBody.innerHTML += `<tr><td>${v.id}</td><td>${v.placa}</td><td>${v.modelo}</td><td>${v.capacidade}</td><td>${v.status}</td></tr>`;
-  });
-
-  const cidadesSet = new Set([...motoristas.map(m => m.cidade)]);
-  const listaCidades = document.getElementById('listaCidades');
-  cidadesSet.forEach(c => {
-    listaCidades.innerHTML += `<li class="list-group-item">${c}</li>`;
-  });
-}
-
-function filtrarTabela(idTabela, termo, coluna) {
-  const tabela = document.getElementById(idTabela);
-  const linhas = tabela.getElementsByTagName("tr");
-  for (let i = 1; i < linhas.length; i++) {
-    const celula = linhas[i].getElementsByTagName("td")[coluna];
-    if (celula) {
-      const txt = celula.textContent || celula.innerText;
-      linhas[i].style.display = txt.toLowerCase().includes(termo.toLowerCase()) ? "" : "none";
-    }
-  }
-}
-
-window.onload = popularTabelas;
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
